refactor: split platform and ERP services with tenant cache and multitenancy support
- Introduced PlatformResolverService with caching via TenantCache
- Implemented TenantInterceptor to validate tenant headers and license expiry
- Resolved circular dependency between HibernateConfig and Tenant-related beans
- Removed legacy DatabaseUtil and StudentDataAccess layers
- Migrated to clean JPA repositories with custom filtered queries
- Improved schema resolution using TenantContextHolder and current tenant resolver
- Aligned architecture for REST-based tenant resolution (no per-request REST call)